Compositor: Masks are not updating correctly in Backdrop/Viewer Node #119211

Closed
opened 2024-03-08 16:32:15 +01:00 by Seja · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-08 00:32, hash: 6dffc162c7b9

Short description of error
In Blender compositor (CPU or GPU), when you apply an animated mask on a video with Set Alpha Node, the mask won't update correctly and will display a wrong state. Hitting F12 in Compositing workspace updates the present frame correctly, but the problem persists when you skip to another frame. Changing the Precision or Render/Edit quality does not fix the issue.

I think after some time, the mask is finally loaded in memory entirely and the issue is "fixed", but I'm not entirely sure about that.

Exact steps for others to reproduce the error
Open VFX workspace,
Create an animated mask,
In compositor, apply the mask to a movie clip (Node setup shown on image),
Try changing frames on the timeline and see if the mask is in correct position,
Hit F12 to see the mask update to correct state.

obrazek

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-08 00:32, hash: `6dffc162c7b9` **Short description of error** In Blender compositor (CPU or GPU), when you apply an animated mask on a video with Set Alpha Node, the mask won't update correctly and will display a wrong state. Hitting F12 in Compositing workspace updates the present frame correctly, but the problem persists when you skip to another frame. Changing the Precision or Render/Edit quality does not fix the issue. I think after some time, the mask is finally loaded in memory entirely and the issue is "fixed", but I'm not entirely sure about that. **Exact steps for others to reproduce the error** Open VFX workspace, Create an animated mask, In compositor, apply the mask to a movie clip (Node setup shown on image), Try changing frames on the timeline and see if the mask is in correct position, Hit F12 to see the mask update to correct state. ![obrazek](/attachments/c72652fd-40ff-4b9c-b596-7186a0425d78)
Seja added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-03-08 16:32:16 +01:00
Author

This bug was already present in Blender Alpha 4.1 versions

This bug was already present in Blender Alpha 4.1 versions
Iliya Katushenock added the
Interest
Compositing
Interest
VFX & Video
labels 2024-03-08 17:21:27 +01:00
Member

Thanks for the report. I can't reproduce the issue. Both backdrop and render viewer are updating as expected. Here is what I tried:
animate mask

Thanks for the report. I can't reproduce the issue. Both backdrop and render viewer are updating as expected. Here is what I tried: ![animate mask](/attachments/1c140c73-7c88-4f24-ac01-d0f90dfd39d3)
Author

Hi,
thanks for the response! I made a short video demonstrating the bug. I made a small mistake in my report, the bug is only present in the GPU compositor in Blender 4.2.0 Alpha
I tested it with different codecs (H.264, FFV1, Matroska containing webm) and image sequences, same issue with all of them.
I'm sorry I sound a little tired in the video.

Hi, thanks for the response! I made a short video demonstrating the bug. I made a small mistake in my report, the bug is only present in the GPU compositor in Blender 4.2.0 Alpha I tested it with different codecs (H.264, FFV1, Matroska containing webm) and image sequences, same issue with all of them. I'm sorry I sound a little tired in the video.
8.0 MiB
Member

Ok thanks, I can confirm. I'm looking into it

Ok thanks, I can confirm. I'm looking into it
Habib Gahbiche added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-03-12 19:40:17 +01:00
Habib Gahbiche self-assigned this 2024-03-12 19:40:38 +01:00
Philipp Oeser added the
Module
VFX & Video
label 2024-04-02 11:01:33 +02:00
Author

The issue seems to be partially resolved in Blender 4.2.0 Alpha hash ff4fc03023 (May 4th).
Masks are now not breaking that easily in Viewer Node and update almost correctly, especially when skipping frames. But when I slide the playhead on the timeline across the footage, it still doesn't.
Judging only from the observation of the behavior, I think the Compositor updates them more frequently now and loads them in memory correctly, but still skips the update in some cases, where the final render doesn't skip those updates.

The issue seems to be partially resolved in Blender 4.2.0 Alpha hash ff4fc03023b0 (May 4th). Masks are now not breaking that easily in Viewer Node and update almost correctly, especially when skipping frames. But when I slide the playhead on the timeline across the footage, it still doesn't. Judging only from the observation of the behavior, I think the Compositor updates them more frequently now and loads them in memory correctly, but still skips the update in some cases, where the final render doesn't skip those updates.
Omar Emara added
Type
Bug
and removed
Type
Report
labels 2024-06-04 18:46:33 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-06-13 07:43:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119211
No description provided.