Fix #119211: GPU Compositor: Masks are not updating correctly in Backdrop/Viewer Node