source/blender/compositor/realtime_compositor/cached_resources/intern/cached_image.cc
@@ -307,7 +307,7 @@ GPUTexture *CachedImageContainer::get(Context &context,
   auto &cached_images_for_id = map_.lookup_or_add_default(image->id.name);
 
   /* Invalidate the cache for that image ID if it was changed and reset the recalculate flag. */
-  if (context.query_id_recalc_flag(reinterpret_cast<ID *>(image)) & ID_RECALC_ALL) {
+  if (context.query_id_recalc_draw_flag(reinterpret_cast<ID *>(image)) & ID_RECALC_ALL) {
     cached_images_for_id.clear();
   }
 
