source/blender/compositor/realtime_compositor/cached_resources/intern/cached_texture.cc
@@ -159,7 +159,7 @@ CachedTexture &CachedTextureContainer::get(Context &context,
   auto &cached_textures_for_id = map_.lookup_or_add_default(texture->id.name);
 
   /* Invalidate the cache for that texture ID if it was changed and reset the recalculate flag. */
-  if (context.query_id_recalc_flag(reinterpret_cast<ID *>(texture)) & ID_RECALC_ALL) {
+  if (context.query_id_recalc_draw_flag(reinterpret_cast<ID *>(texture)) & ID_RECALC_ALL) {
     cached_textures_for_id.clear();
   }
 
